--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cryptofolio</title>
+
+    <!-- SEO / Branding -->
+    <title>CryptoFolio — Track Your Crypto</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- App -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
